--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ html {
 
 body {
   height: 100vh;
-  padding: 5%;
   background-color: #323232;
 }
 
@@ -63,7 +62,7 @@ body {
 }
 
 .balance-label {
-  font-size: 2.2rem;
+  font-size: 2rem;
   margin-top: 1rem;
 }
 
@@ -72,7 +71,7 @@ body {
 }
 
 .balance-value {
-  font-size: 4.5rem;
+  font-size: 2.5rem;
 }
 
 /* TRANSACTIONS */
@@ -91,7 +90,6 @@ body {
   padding: 4% 5%;
   display: flex;
   border-bottom: solid 1px #EAEAEA;
-  /* background-color: #5B5656; */
 }
 
 .transaction-category {
@@ -117,6 +115,8 @@ body {
   margin-left: auto;
 }
 
+
+/* ADD TRANSACTION */
 .add-transaction {
   grid-row: span 2;
   text-align: center;
