--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ body {
   height: 85vh;
   display: grid;
   grid-template-columns: 5fr 3fr;
-  grid-template-rows: repeat(6, 1fr);
+  grid-template-rows: repeat(4, 1fr) 0.5fr 1fr;
   gap: 2rem;
 }
 
@@ -142,10 +142,21 @@ body {
   margin-left: auto;
 }
 
+/* SUMMARY */
+.summary {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 2%;
+}
+
+.label-summary {
+  font-size: 1.3rem;
+}
+
 
 /* ADD TRANSACTION */
 .add-transaction {
-  grid-row: span 2;
+  grid-row: span 1;
   text-align: center;
 }
 
